// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vue 3 > basic 1`] = `
"import { createVNode as _createVNode } from "vue";
_createVNode("div", null, null);"
`;

exports[`Vue 3 > basic 2`] = `
"import { createVNode as _createVNode } from "vue";
_createVNode("div", {
  "key": "1"
}, null);"
`;

exports[`Vue 3 > basic 3`] = `
"import { createVNode as _createVNode } from "vue";
_createVNode("div", {
  "foo": 'bar'
}, null);"
`;

exports[`Vue 3 > custom babel plugins 1`] = `
"import { createVNode as _createVNode } from "vue";
const x: string = _createVNode("div", null, null);"
`;

exports[`Vue 3 > custom options 1`] = `
"import { createVNode as _createVNode } from "vue";
_createVNode("input", {
  "on": {
    click: a
  }
}, null);"
`;

exports[`Vue 3 > custom options 2`] = `
"import { createVNode as _createVNode } from "vue";
import _transformOn from "@vue/babel-helper-vue-transform-on";
_createVNode("input", _transformOn({
  click: a
}), null);"
`;

exports[`Vue 3 > custom parser plugins 1`] = `
"import { createVNode as _createVNode } from "vue";
@x
class X {}
;
const x = _createVNode("div", null, null);"
`;

exports[`Vue 3 > custom parser plugins 2`] = `
"import { createVNode as _createVNode } from "vue";
@x
class X {}
;
const x: string = _createVNode("div", null, null);"
`;

exports[`Vue 3 > typescript 1`] = `
"import { createVNode as _createVNode } from "vue";
const foo: any = _createVNode("div", null, null);"
`;
